--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -78,7 +78,12 @@
 
     "tr-dslite-settings": "DS-Lite Settings",
     "tr-dslite-aftr-type": "AFTR Type",
+    "tr-transix": "transix",
+    "tr-xpass": "Xpass",
+    "tr-v6connect": "v6connect",
     "tr-dslite-area": "Area",
+    "tr-east-japan": "East Japan",
+    "tr-west-japan": "West Japan",
     "tr-dslite-aftr-ipv6-address": "AFTR Address",
     "tr-dslite-notice1": "Note: Actual values may differ.",
 
