--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -159,7 +159,7 @@
     "tr-tui-yes": "はい",
     "tr-tui-no": "いいえ",
     "tr-tui-ok": "OK",
-    "tr-tui-decide": "決定"
+    "tr-tui-decide": "決定",
     "tr-tui-cancel": "キャンセル",
     
     "tr-tui-view-device-info": "デバイス情報",
