--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -159,6 +159,7 @@
     "tr-tui-yes": "Yes",
     "tr-tui-no": "No",
     "tr-tui-ok": "OK",
+    "tr-tui-decide": "Decide",
     "tr-tui-cancel": "Cancel",
     "tr-tui-choice": "Choice",
     
