--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -151,7 +151,7 @@
 
     "tr-feedback-link": "フォーラム",
 
-    "tr-tui-packages": "パッケージインストール",
+    "tr-tui-packages": "パッケージ",
     "tr-tui-main-menu": "メインメニュー",
     "tr-tui-select": "選択",
     "tr-tui-back": "戻る",
@@ -175,10 +175,11 @@
     "tr-tui-no-config-vars": "設定変数がありません",
     "tr-tui-postinst-not-found": "postinst.shファイルが見つかりません",
     "tr-tui-setup-not-found": "setup.shファイルが見つかりません",
-    "tr-tui-apply-confirm-step1": "1. パッケージインストール (postinst.sh)",
-    "tr-tui-apply-confirm-step2": "2. カスタムフィードパッケージインストール (customfeeds.sh)",
-    "tr-tui-apply-confirm-step3": "3. 設定適用 (setup.sh)",
-    "tr-tui-apply-confirm-step4": "4. 再起動（確認あり）",
+    "tr-tui-apply-confirm-step1": "1. パッケージ (postinst.sh)",
+    "tr-tui-apply-confirm-step2": "2. カスタムフィードパッケージ (customfeeds.sh)",
+    "tr-tui-apply-confirm-step3": "3. カスタムスクリプト (customscripts.sh)",
+    "tr-tui-apply-confirm-step4": "4. 設定適用 (setup.sh)",
+    "tr-tui-apply-confirm-step5": "5. 再起動（確認あり）",
     "tr-tui-apply-confirm-question": "実行しますか？",
     "tr-tui-installing-packages": "パッケージをインストール中",
     "tr-tui-installing-custom-packages": "カスタムフィードパッケージをインストール中",
@@ -202,7 +203,8 @@
     "tr-tui-isp-info": "ISP情報:",
     "tr-tui-manual-config-required": "手動で接続設定を行ってください。",
     
-    "tr-tui-custom-feeds": "カスタムフィードパッケージインストール",
+    "tr-tui-custom-feeds": "カスタムフィードパッケージ",
     "tr-tui-feed-gspotx2f": "gSpotx2fリポジトリ",
-    "tr-tui-feed-jerrykuku": "jerrykukuリポジトリ"
+    "tr-tui-feed-jerrykuku": "jerrykukuリポジトリ",
+    "tr-tui-custom-scripts": "カスタムスクリプト"
 }
