--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -151,7 +151,7 @@
 
     "tr-feedback-link": "Forum",
 
-    "tr-tui-packages": "Install Packages",
+    "tr-tui-packages": "Packages",
     "tr-tui-main-menu": "Main Menu",
     "tr-tui-select": "Select",
     "tr-tui-back": "Back",
@@ -178,8 +178,9 @@
     "tr-tui-setup-not-found": "setup.sh file not found",
     "tr-tui-apply-confirm-step1": "1. Install packages (postinst.sh)",
     "tr-tui-apply-confirm-step2": "2. Install custom feed packages (customfeeds.sh)",
-    "tr-tui-apply-confirm-step3": "3. Apply configuration (setup.sh)",
-    "tr-tui-apply-confirm-step4": "4. Reboot (confirmation required)",
+    "tr-tui-apply-confirm-step3": "3. Install custom scripts (customscripts.sh)",
+    "tr-tui-apply-confirm-step4": "4. Apply configuration (setup.sh)",
+    "tr-tui-apply-confirm-step5": "5. Reboot (confirmation required)",
     "tr-tui-apply-confirm-question": "Execute?",
     "tr-tui-installing-packages": "Installing packages",
     "tr-tui-installing-custom-packages": "Installing custom packages",
@@ -204,7 +205,8 @@
     "tr-tui-isp-info": "ISP Information:",
     "tr-tui-manual-config-required": "Please configure connection settings manually.",
 
-    "tr-tui-custom-feeds": "Install Custom Feed Packages",
+    "tr-tui-custom-feeds": "Custom Feed Packages",
     "tr-tui-feed-gspotx2f": "gSpotx2f Repository",
-    "tr-tui-feed-jerrykuku": "jerrykuku Repository"   
+    "tr-tui-feed-jerrykuku": "jerrykuku Repository" ,
+    "tr-tui-custom-scripts": "Custom Scripts"
 }
