--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -176,9 +176,9 @@
     "tr-tui-no-config-vars": "No configuration variables set",
     "tr-tui-postinst-not-found": "postinst.sh file not found",
     "tr-tui-setup-not-found": "setup.sh file not found",
-    "tr-tui-apply-confirm-step1": "1. Install packages (postinst.sh)",
-    "tr-tui-apply-confirm-step2": "2. Install custom feed packages (customfeeds.sh)",
-    "tr-tui-apply-confirm-step3": "3. Install custom scripts (customscripts.sh)",
+    "tr-tui-apply-confirm-step1": "1. Packages (postinst.sh)",
+    "tr-tui-apply-confirm-step2": "2. Custom feed packages (customfeeds.sh)",
+    "tr-tui-apply-confirm-step3": "3. Custom scripts (customscripts.sh)",
     "tr-tui-apply-confirm-step4": "4. Apply configuration (setup.sh)",
     "tr-tui-apply-confirm-step5": "5. Reboot (confirmation required)",
     "tr-tui-apply-confirm-question": "Execute?",
