--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -212,5 +212,5 @@
     "tr-customscript-adguardhome": "AdGuard Home",
     "tr-customscript-install-openwrt": "OpenWrtリポジトリからインストール",
     "tr-customscript-install-official": "公式バイナリをGitHubからインストール",
-    "tr-customscript-remove": "AdGuard Homeを削除",
+    "tr-customscript-remove": "AdGuard Homeを削除"
 }
