--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -217,7 +217,7 @@
     "tr-tui-customscript-resource-ng": "リソースが不足しています",
     "tr-tui-customscript-install-openwrt": "OpenWrtパッケージのインストール",
     "tr-tui-customscript-install-official": "公式バイナリのインストール",
-    "tr-tui-customscript-adguardhome": "アドガードホーム"
+    "tr-tui-customscript-adguardhome": "アドガードホーム",
     "tr-tui-customscript-remove": "アドガードホームを削除",
     "tr-tui-customscript-agh-user": "ユーザーID",
     "tr-tui-customscript-agh-password": "パスワード",
