--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -223,5 +223,6 @@
     "tr-tui-customscript-password": "パスワード",
     "tr-tui-customscript-webport": "WEBポート",
     "tr-tui-customscript-dnsport": "DNSポート",
-    "tr-tui-customscript-lanaddr": "LANアドレス"
+    "tr-tui-customscript-lanaddr": "LANアドレス",
+    "tr-tui-view-customscripts": "customscripts.js"
 }
