--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -223,5 +223,6 @@
     "tr-tui-customscript-password": "Password",
     "tr-tui-customscript-webport": "WEB Port",
     "tr-tui-customscript-dnsport": "DNS Port",
-    "tr-tui-customscript-lanaddr": "LAN Address"
+    "tr-tui-customscript-lanaddr": "LAN Address",
+    "tr-tui-view-customscripts": "customscripts.js"
 }
