--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -208,7 +208,7 @@
     "tr-tui-feed-jerrykuku": "jerrykukuリポジトリ",
     "tr-tui-custom-scripts": "カスタムスクリプト",
 
-    "tr-tui-view-script-list": "設定カスタムスクリプト"
+    "tr-tui-view-script-list": "設定カスタムスクリプト",
     "tr-tui-customscript-resource-check": "リソースチェック",
     "tr-tui-customscript-memory": "メモリ",
     "tr-tui-customscript-storage": "ストレージ",
