--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -225,5 +225,6 @@
     "tr-tui-customscript-webport": "WEB Port",
     "tr-tui-customscript-dnsport": "DNS Port",
     "tr-tui-customscript-lanaddr": "LAN Address",
-    "tr-tui-view-customscripts": "customscripts.sh"
+    "tr-tui-view-customscripts": "customscripts.sh",
+    "tr-tui-no-custom-scripts":  "No scripts selected" 
 }
