--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -226,5 +226,6 @@
     "tr-tui-customscript-dnsport": "DNS Port",
     "tr-tui-customscript-lanaddr": "LAN Address",
     "tr-tui-view-customscripts": "customscripts.sh",
+    "tr-tui-installing-custom-scripts": "Executing custom scripts",
     "tr-tui-no-custom-scripts":  "No scripts selected" 
 }
