--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -227,5 +227,6 @@
     "tr-tui-customscript-lanaddr": "LANアドレス",
     "tr-tui-view-customscripts": "customscripts.sh",
     "tr-tui-installing-custom-scripts": "カスタムスクリプトを実行中",
-    "tr-tui-no-custom-scripts": "スクリプトが選択されていません" 
+    "tr-tui-no-custom-scripts": "スクリプトが選択されていません" ,
+    "tr-tui-reboot-question": "再起動しますか？"
 }
