--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -212,7 +212,8 @@
     "tr-tui-customscript-resource-check": "リソースチェック",
     "tr-tui-customscript-memory": "メモリ",
     "tr-tui-customscript-storage": "ストレージ",
-    "tr-tui-customscript-required": "必要",
+    "tr-tui-customscript-minimum": "必須",
+    "tr-tui-customscript-recommended": "推奨",
     "tr-tui-customscript-available": "利用可能",
     "tr-tui-customscript-resource-ok": "インストール可能です",
     "tr-tui-customscript-resource-ng": "リソースが不足しています",
