--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -212,7 +212,8 @@
     "tr-tui-customscript-resource-check": "Resource Check",
     "tr-tui-customscript-memory": "Memory",
     "tr-tui-customscript-storage": "Storage",
-    "tr-tui-customscript-required": "Required",
+    "tr-tui-customscript-minimum": "Minimum",
+    "tr-tui-customscript-recommended": "Recommended",
     "tr-tui-customscript-available": "Available",
     "tr-tui-customscript-resource-ok": "Installation possible",
     "tr-tui-customscript-resource-ng": "Insufficient resources",
