--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -149,6 +149,8 @@
     "tr-dnsmasq-auto-optimization": "自動最適化",
     "tr-dnsmasq-optimization-disabled": "最適化無効",
 
+    "tr-web-tools": "Webサーバーツール",
+    
     "tr-feedback-link": "フォーラム",
 
     "tr-tui-packages": "パッケージ",
