--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -236,7 +236,7 @@
     "tr-agh-summary-customscripts": "カスタムスクリプト",
     "tr-agh-customscript-enabled": "有効",
     "tr-agh-customscript-disabled": "無効",
-    "tr-agh-customscript-adguardhome": "アドガードホーム",
+    "tr-agh-customscript-adguardhome": "アドガードホーム＠＠＠",
     "tr-agh-customscript-username": "ユーザーID",
     "tr-agh-customscript-password": "パスワード（8文字以上）",
     "tr-agh-customscript-webport": "WEBポート",
