--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -239,7 +239,7 @@
     "tr-tui-no-config": "No configuration items",
     "tr-tui-reboot-question": "Do you want to reboot?",
 
-    "tr-adguardhome-disabled": "AdGuard Home Disabled"
+    "tr-adguardhome-disabled": "AdGuard Home Disabled",
     "tr-agh-summary-customscripts": "Custom Scripts",
     "tr-agh-customscript-enabled": "Enabled",
     "tr-agh-customscript-disabled": "Disabled",
