--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -189,6 +189,8 @@
     "tr-tui-config-applied": "Configuration applied successfully!",
     "tr-tui-auto-config-applied": "Auto-configuration applied!",
     "tr-tui-use-auto-config": "Use this auto-detected configuration?",
+    "tr-tui-removing-packages": "Removing packages...",
+    "tr-tui-package-removal-failed": "Package removal failed",
     
     "tr-tui-space-toggle": "Space=toggle",
     
