--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -181,13 +181,13 @@
     "tr-tui-postinst-not-found": "postinst.shファイルが見つかりません",
     "tr-tui-setup-not-found": "setup.shファイルが見つかりません",
     "tr-tui-apply-confirm-step1": "1. パッケージ (postinst.sh)",
-    "tr-tui-apply-confirm-step2": "2. カスタムフィードパッケージ (customfeeds.sh)",
+    "tr-tui-apply-confirm-step2": "2. カスタムフィード (customfeeds.sh)",
     "tr-tui-apply-confirm-step3": "3. 設定適用 (setup.sh)",
     "tr-tui-apply-confirm-step4": "4. カスタムスクリプト (customscripts.sh)",
     "tr-tui-apply-confirm-step5": "5. 再起動（確認あり）",
     "tr-tui-apply-confirm-question": "実行しますか？",
     "tr-tui-installing-packages": "パッケージをインストール中",
-    "tr-tui-installing-custom-packages": "カスタムフィードパッケージをインストール中",
+    "tr-tui-installing-custom-packages": "カスタムフィードをインストール中",
     "tr-tui-applying-config": "システム設定を適用中",
     "tr-tui-config-applied": "設定の適用が完了しました！",
     "tr-tui-auto-config-applied": "自動設定を適用しました！",
@@ -195,6 +195,15 @@
     "tr-tui-removing-packages": "パッケージを削除中...",
     "tr-tui-removal-completed": "パッケージの削除が完了しました",
     "tr-tui-package-removal-failed": "パッケージの削除に失敗しました",
+    
+    "tr-tui-summary-removed": "削除",
+    "tr-tui-summary-installed": "インストール",
+    "tr-tui-summary-customfeeds": "カスタムフィード",
+    "tr-tui-summary-settings": "設定変数",
+    "tr-tui-summary-scripts": "カスタムスクリプト",
+    "tr-tui-no-changes-applied": "変更はありませんでした",
+    "tr-tui-warning": "警告",
+    "tr-tui-script-failed": "個のスクリプトが失敗",
     
     "tr-tui-space-toggle": "スペース=切替",
     
@@ -211,7 +220,7 @@
     "tr-tui-isp-info": "ISP情報:",
     "tr-tui-manual-config-required": "手動で接続設定を行ってください。",
     
-    "tr-tui-custom-feeds": "カスタムフィードパッケージ",
+    "tr-tui-custom-feeds": "カスタムフィード",
     "tr-tui-feed-gspotx2f": "gSpotx2fリポジトリ",
     "tr-tui-feed-jerrykuku": "jerrykukuリポジトリ",
     "tr-tui-custom-scripts": "カスタムスクリプト",
@@ -251,7 +260,7 @@
     "tr-agh-customscript-dnsport": "DNSポート",
     
     "tr-tui-summary-packages": "パッケージ",
-    "tr-tui-summary-customfeeds": "カスタムフィードパッケージ",
+    "tr-tui-summary-customfeeds": "カスタムフィード",
     "tr-tui-summary-variables": "設定変数",
     "tr-tui-summary-customscripts": "カスタムスクリプト",
     "tr-tui-no-config": "設定項目がありません",
