--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -272,7 +272,7 @@
     "tr-dns-adblock-filter-url": "Filter URL",
     "tr-dns-adblock-nextdns": "NextDNS",
     "tr-dns-adblock-disabled": "Disabled",
-    "tr-dns-adblock-nextdns-info": "NextDNS will be installed. Configure via LuCI after installation."
+    "tr-dns-adblock-nextdns-info": "NextDNS will be installed. Configure via LuCI after installation.",
     
     "tr-tui-restore-point": "Restore Point",
     "tr-tui-no-restore-points": "No restore points available",
