--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -139,7 +139,7 @@
     "tr-utilities": "ユーティリティ",
     "tr-usb-storage": "USBストレージ対応",
     "tr-file-sharing": "ファイル共有",
-    "tr-web-tools": "Webサーバーツール",
+    "tr-web-tools": "Webサーバー",
     "tr-encrypted-dns": "暗号化DNS",
     
     "tr-dnsmasq-settings": "DNS サーバー最適化",
