--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -138,7 +138,7 @@
     "tr-themes-dashboard": "テーマとダッシュボード",
     "tr-utilities": "ユーティリティ",
     "tr-usb-storage": "USBストレージ対応",
-    "tr-file-sharing": "ファイル共有",
+    "tr-file-sharing": "ファイルサーバー",
     "tr-web-tools": "Webサーバー",
     "tr-encrypted-dns": "暗号化DNS",
     
