--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -262,9 +262,9 @@
     "tr-agh-customscript-dnsport": "DNSポート",
 
     "tr-dns-adblock-title": "DNS広告ブロック",
-    "tr-dns-adblock-adblock-fast": "Adblock Fast",
+    "tr-dns-adblock-adblock-fast": "アドブロックファースト",
     "tr-dns-adblock-filter-url": "フィルタURL",
-    "tr-dns-adblock-nextdns": "NextDNS",
+    "tr-dns-adblock-nextdns": "ネクストDNS",
     "tr-dns-adblock-disabled": "無効",
     "tr-dns-adblock-nextdns-info": "NextDNSがインストールされます。インストール後、LuCIから設定してください。",
     
