--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -266,7 +266,7 @@
     "tr-dns-adblock-filter-url": "フィルタURL",
     "tr-dns-adblock-nextdns": "ネクストDNS",
     "tr-dns-adblock-disabled": "無効",
-    "tr-dns-adblock-nextdns-info": "NextDNSがインストールされます。インストール後、LuCIから設定してください。",
+    "tr-dns-adblock-nextdns-info": "<a href=\"https://nextdns.io\" target=\"_blank\">nextdns.io</a> で、アカウント登録とConfiguration IDを取得して下さい"
     
     "tr-tui-summary-packages": "パッケージ",
     "tr-tui-summary-customfeeds": "カスタムフィード",
