--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -237,6 +237,7 @@
     "tr-tui-customscript-resource-ok": "Installation possible",
     "tr-tui-customscript-resource-ng": "Insufficient resources",
     "tr-tui-customscript-force-install-question": "Force install anyway?",
+    "tr-agh-admin-url": "Admin URL: http://$device_name:$agh_web_port",
     "tr-tui-customscript-install-openwrt": "Install from OpenWrt packages",
     "tr-tui-customscript-install-official": "Install official binary",
     "tr-tui-customscript-adguardhome": "AdGuard Home",
@@ -272,7 +273,7 @@
     "tr-dns-adblock-filter-url": "Filter URL",
     "tr-dns-adblock-nextdns": "NextDNS",
     "tr-dns-adblock-disabled": "Disabled",
-    "tr-dns-adblock-nextdns-info": "Register account and get Configuration ID at {nextdns.io}",
+    "tr-dns-adblock-nextdns-info": "Register account and get Configuration ID at <nextdns.io>",
     
     "tr-tui-restore-point": "Restore Point",
     "tr-tui-no-restore-points": "No restore points available",
